Updated the screenshots in the phase 1 implementation

--- a/dissertation/l4proj.tex
+++ b/dissertation/l4proj.tex
@@ -573,24 +573,24 @@ easy to deploy my code onto a server. Therefore I could focus more on the overal
     \begin{subfigure}[b]{0.45\textwidth}
         \includegraphics[width=\textwidth]{images/ui_chaser.png}
         \caption{The Chaser view.}
-        \label{fig:ui_chaser}
+        \label{fig:phase1_ui_chaser}
     \end{subfigure}
     ~ %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc. 
       %(or a blank line to force the subfigure onto a new line)
     \begin{subfigure}[b]{0.45\textwidth}
-        \includegraphics[width=\textwidth]{images/synthetic_2.png}
+        \includegraphics[width=\textwidth]{images/ui_runner.png}
         \caption{The Runner View}
-        \label{fig:ui_runner}
+        \label{fig:phase1_ui_runner}
     \end{subfigure}
     
     \caption{These two screenshots show the runner and the chaser states that the players
-    will see when playing the game. \ref{fig:ui_chaser} shows you what a chaser player would
-    see while the game is in progress while \ref{fig:ui_runner} shows you what a runner would
+    will see when playing the game. \ref{fig:phase1_ui_chaser} shows you what a chaser player would
+    see while the game is in progress while \ref{fig:phase1_ui_runner} shows you what a runner would
     be able to see.
     }
 \end{figure}
 For the game to be accessible to users I needed to make a User Interface that was
-clear and simple to use for the duration of the game. Figures \ref{fig:ui_chaser} and \ref{fig:ui_runner} 
+clear and simple to use for the duration of the game. Figures \ref{fig:phase1_ui_chaser} and \ref{fig:phase1_ui_runner} 
 gives you a view of the two different screens that the player would get when they start a
 game. The final design takes advantage of the Google Maps SDK for Android which has
 an easy to use API for working with maps with Jetpack Compose \citep{GoogleMaps}.
@@ -605,14 +605,14 @@ to tell the player what type of player. To the right of that label is the "Jail 
 label which only shows in the 30 seconds after a player is caught or when the game is
 started.
 
-As seen in figure \ref{fig:ui_chaser}, the Chaser view doesn't have a lot of extra features
+As seen in figure \ref{fig:phase1_ui_chaser}, the Chaser view doesn't have a lot of extra features
 compared to the runner view. The only main difference is that there is a marker to show the
 runners locations. In both player types, the player's current location is marked in green and
 all other players will have a red marker. This is in response to feedback from phase 1 (see section
 \ref{phase1survey} for more discussion on this) as in that phase I had markers which were the same
 colour.
 
-The Runner User Interface (Shown in figure \ref{fig:ui_runner}) has one key exclusive feature. This is the see Chaser button. If the user
+The Runner User Interface (Shown in figure \ref{fig:phase1_ui_runner}) has one key exclusive feature. This is the see Chaser button. If the user
 is in a high GPS location for a full minute, they will be able to press the "See the Chaser" button
 at the bottom of the screen. This will give the user a 3 second view of the chaser's location. This
 was another addition in response to feedback from the evaluation in phase 1.
