--- a/dissertation/l4proj.tex
+++ b/dissertation/l4proj.tex
@@ -1139,7 +1139,27 @@ While these ranges may be seen as a problem if a seamless approach was made when
 example, a mechanic could be that phones with a higher chance of having low noise ratios could be seen as more threatening since their catch
 radius could become large if they are in the right positions. This could add new stakes to the game where people with better and more accurate
 GNSS sensors have to be quick and aim to get as close to the player as possible while a runner would have to ensure that they get as far away
-as possible from a chaser with a phone with a larger catch radius. 
+as possible from a chaser with a phone with a larger catch radius.
+
+\section{Survey Results and the Powerup System}
+
+\begin{table}[]
+    \centering
+    \resizebox{\textwidth}{!}{\begin{tabular}{|l|l|l|l|l|l|}
+    \rowcolor[HTML]{9B9B9B} 
+    \textbf{Question}                                                                  & \textbf{Strongly Agree} & \textbf{Somewhat Agree} & \textbf{Neutral} & \textbf{Somewhat Disagree} & \textbf{Strongly Disagree} \\ \hline
+    The Gameplay was an enjoyable experience                                           & 2                       & 2                       & 0                & 0                          & 0                          \\ \hline
+    The game gave me a better sense of awareness as \\to where GPS accuracy can decrease & 3                       & 1                       & 0                & 0                          & 0                         \\ \hline
+    The User Interface Displayed information clearly                                   & 2                       & 2                       & 0                & 0                          & 0                          \\ \hline
+    The game connection was stable                                                     & 0                       & 4                       & 0                & 0                          & 0                          \\ \hline
+    I could catch my opponent by simply walking up to them                                                    & 1                       & 3                       & 0                & 0                          & 0                          \\ \hline
+    The 'See Chaser' powerup helped me form a different strategy                                                     & 3                       & 0                       & 1                & 0                          & 0                          \\ \hline
+    \end{tabular}}
+    \caption{Like phase 1, I gave my participants a brief survey at the end of my evaluation. I gave the users some of the same questions as before along with two other questions
+    to guage how useful they thought the new features were.
+    }
+    \label{tab:agreephase2}
+\end{table}
 
 %==================================================================================================================================
 \chapter{Conclusion}
