Added my phase 2 quantitative data to the appendix

--- a/dissertation/l4proj.tex
+++ b/dissertation/l4proj.tex
@@ -1180,7 +1180,10 @@ After that, I gave the participants two new statements which focused on the Catc
 system. Looking at the last two statements of table \ref{tab:agreephase2}, I found that 3 out of 4 of the
 participants said that they somewhat agreed with the fact that the catching mechanic had improved with one
 person stating that they strongly agreed with the statement. The final question I asked was whether or not
-they agreed with the 
+they agreed that the "see chaser" button improved the game. The responses were positived with 3 out of 4
+saying they strongly agreed with only one person saying that they had no real opinion on the statement.
+
+
 
 %==================================================================================================================================
 \chapter{Conclusion}
@@ -1338,6 +1341,26 @@ further look into what conditions a player would need to win and also how they w
     }
     \label{fig:s21noiseandcatch}
 \end{figure}
+
+\chapter{Phase 2 Qualitative Data}
+
+\section{Do you feel that there were any balance issues in the game?}
+\label{phase2balance}
+
+\begin{itemize}
+    \item Catch radius was too big.
+    \item no I think it is balanced
+    \item At one point the chaser was able to catch me from far away although I was able to see them. We also switched roles at a random point during a game.
+\end{itemize}
+
+\section{Do you have any other comments, feature ideas or feedback?}
+\label{phase2}
+
+\begin{itemize}
+    \item radius of uncertainty plotted on map as well as catching radius
+    \item I really liked the game! It's an interesting concept and made me think about where my GPS signal is strongest and weakest. I also had to use strategy to catch the runner. Unfortunately, I didn't get the chance to use a powerup since I spent most of the game as the chaser. Some possible ideas: - allow some customisability with the pre-game setup, such as choosing how long the game should be - allow the option to extend the game time after it has ended. - make it more clear when the chaser has caught the runner. I didn't realise I had caught the runner until I looked down at my phone and saw that I only had 15 seconds left to run as the runner. Perhaps a modal could flash on screen saying the chaser has been caught and are now swapping roles (maybe even the phone could vibrate).
+    \item Overall, it was better experience since the catching mechanic worked much better than before where it didn't work when both players were next to each other. I also found the powerup useful as a runner
+\end{itemize}
 
 \chapter{Ethics Checklist}
 
