Added another evaluation paragraph

--- a/dissertation/l4proj.tex
+++ b/dissertation/l4proj.tex
@@ -1110,6 +1110,7 @@ have been better to constantly check the mean or take the standard deviation rat
 If I have more time to implement a new system, I would look into making a new variance based system.
 
 \section{Catching Feature}
+\label{phase2catcheval}
 Another major improvement that I implemented was a new catching system where the catch radius can increase or decrease based
 on the satellite noise ratio based on the method described by \cite{uberGPS}. For this evaluation I was hoping that the catching mechanic would be more helpful to play when
 accounting for multipath errors.
@@ -1182,6 +1183,17 @@ participants said that they somewhat agreed with the fact that the catching mech
 person stating that they strongly agreed with the statement. The final question I asked was whether or not
 they agreed that the "see chaser" button improved the game. The responses were positived with 3 out of 4
 saying they strongly agreed with only one person saying that they had no real opinion on the statement.
+
+At the end of the survey I asked my participants some Qualitative questions to get some more details about
+their experience. Like the first phase, I asked whether there were any balancing issues when playing the game.
+Out of the quotes recorded in section \ref{phase2balance}, the main issues were to do with the catch radius,
+for example one person said that the catch radius was "too big" and another said that "the chaser was able to catch
+me from far away". This ties into the issues that I reported in section \ref{phase2catcheval} where the catch
+radiuses would become really big over time. While the participants say that it might affect the balance of the
+game, I still feel that there could be potential for a fun game mechanic where different phones will be able
+to take out runners at larger distances than other phones.
+
+
 
 
 
