Added phase 1 qualitative data to the appendix

--- a/dissertation/l4proj.tex
+++ b/dissertation/l4proj.tex
@@ -1272,7 +1272,30 @@ further look into what conditions a player would need to win and also how they w
     \label{fig:note9}
 \end{figure}
 
+\chapter{Phase 1 Qualitative Data}
 
+\section{Do you feel that there were any balance issues in the game?}
+
+\begin{itemize}
+    \item Only balancing issue I think was the duration of the jail time and the difference between the GPS accuracy in the phones.
+    \item I felt like runner should also be able to see the chaser. Maybe not always but every 20 seconds.
+    \item Too hard for chasers to catch runners due to poor GPS error.
+    \item not really
+    \item Difference in phone GPS
+    \item No
+    \item No both players had similar error radii. Felt very balanced.
+\end{itemize}
+
+\section{Do you have any other comments, feature ideas or feedback?}
+
+\begin{itemize}
+    \item Do you have any other comments, feature ideas or feedback?
+    \item Maybe better pointers graphics for runner and chaser.
+    \item Differentiate location icons. Custom timer. Manual catching.
+    \item Was a really fun game to play! Some features which would be nice to see is: - different markers for chaser and runner - customisable game timer - button to manually say a runner has been caught
+    \item Was fun
+    \item 	Different colours for the chaser and runner location pins Maybe restrict the play area like a battle royale game Adding directional arrows to players pins
+\end{itemize}
 
 \chapter{Phase 2 Evaluation Graphs}
 \begin{figure}
