Added another paragraph for the survey results

--- a/dissertation/l4proj.tex
+++ b/dissertation/l4proj.tex
@@ -1193,6 +1193,13 @@ radiuses would become really big over time. While the participants say that it m
 game, I still feel that there could be potential for a fun game mechanic where different phones will be able
 to take out runners at larger distances than other phones.
 
+Finally, I asked my participants to give any other feedback that they may have about the overall gameplay
+and the things that I could do to improve. Some things that came up in this question (full results on 
+section \ref{phase2generalfeedback}) were that the users wanted to see their catch radius on the map.
+Other comments stated that the powerup feature was really useful with one participant saying that
+they "found the powerup useful as a runner". Other participants told me that the powerup feature
+was really useful in informing their decisions. Over the course of the games I observed that people
+had altered their strategy because of this feature.
 
 
 
@@ -1389,7 +1396,7 @@ further look into what conditions a player would need to win and also how they w
 \end{itemize}
 
 \section{Do you have any other comments, feature ideas or feedback?}
-\label{phase2}
+\label{phase2generalfeedback}
 
 \begin{itemize}
     \item radius of uncertainty plotted on map as well as catching radius
